--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,6 @@
     <h1>LeanEngine</h1>
     <p>这是 LeanEngine 的示例应用</p>
     <p>当前时间：<%= currentTime %></p>
-    <p><a href="/todos">pp一个简单的「TODO 列表」示例</a></p>
+    <p><a href="/todos">一个简单的「TODO 列表」示例</a></p>
   </body>
 </html>
