--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,6 @@
     <h1>LeanEngine</h1>
     <p>这是 LeanEngine 的示例应用</p>
     <p>当前时间：<%= currentTime %></p>
-    <p><a href="/todos">这要是可以显示就厉害了</a></p>
+    <p><a href="/todos">这要是可以显示就厉害66666</a></p>
   </body>
 </html>
